k8_s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: juris-deployment
  namespace: juris-ns

spec:
  replicas: 2

  selector:
    matchLabels:
      app: juris

  template:

    metadata:
      labels:
        app: juris

    spec:
      containers:

      - name: juris-container
        image: nginx

        ports:
        - containerPort: 80
