k8_s/multi-pod.yaml
apiVersion: v1
kind: Pod

metadata:
  name: juris-multi-pod
  namespace: juris-ns

spec:
  containers:

    - name: frontend-container
      image: nginx

    - name: backend-container
      image: nginx
