k8_s/pod.yaml
apiVersion: v1
kind: Pod

metadata:
  name: juris-pod
  namespace: juris-ns

spec:
  containers:
    - name: juris-container
      image: nginx
