k8_s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: juris-ingress
  namespace: juris-ns

spec:
  rules:
  - host: juris.local

    http:
      paths:

      - path: /
        pathType: Prefix

        backend:
          service:
            name: juris-service
            port:
              number: 80
